--- a/FSD_ex/style.css
+++ b/FSD_ex/style.css
@@ -1,42 +1,28 @@
- body {
- font-family: Arial, sans-serif;
- background: #f9fafb;
- color: #333;
- }
- h2 { text-align: center; }
-
- .form-card {
- width: 500px;
- margin: 30px auto;
- padding: 49px;
- background: white;
- border: 10px solid #ddd;
- border-radius: 15px;
- }
- label {
-    display: block;
-    margin: 12px 0;
- }
- 
- input, select {
- width: 100%;
- padding: 8px;
- border: 1px solid #ccc;
- border-radius: 4px;
- }
- .actions {
- text-align: center;
- margin-top: 16px;
- }
- .btn {
- padding: 8px 16px;
- background: #2563eb;
- color: white;
- border: none;
- border-radius: 4px;
- cursor: pointer;
- }
-
- .btn.secondary {
- background: rgb(113, 109, 109);
- }
+body {
+    background-image: url('background.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    font-family: Arial, sans-serif;
+    color: #222;
+    text-align: center;
+    padding: 50px;
+}
+h1 {
+    color: #3c3c3c;
+    text-shadow: 1px 1px 3px #bbb;
+}
+a:link {
+    color: blue;
+    text-decoration: none;
+}
+a:visited {
+    color: purple;
+}
+a:active {
+    color: red;
+}
+a:hover {
+    color: green;
+    text-decoration: underline;
+}
